src/App.css
body {
  background-image: url(https://wallpapercave.com/dwp2x/wp3377140.jpg);
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
}

header {
  position: relative;
  padding: 15px;
  background-color: black;
}

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #000000;
  text-align: center;
  padding: 10px;
  font-family: "Bebas";
  color: white;
}

.nav {
  display: flex;
  list-style: none;
  padding: 0;
  margin: 0;
  text-align: center !important;
  font-family: "Bebas";
}

.nav-link {
  color: white !important;
}

.nav-link:hover {
  text-shadow: 
  0 0 5px rgba(255, 255, 255, 0.8),
  0 0 10px rgba(255, 255, 255, 0.6),
  0 0 15px rgba(255, 255, 255, 0.4),
  0 0 20px rgba(255, 255, 255, 0.2),
  0 0 25px rgba(255, 255, 255, 0.1);
}

.centered-image {
  right: 48%;
  height: 70px;
  position: absolute;
  z-index: 999;
  top: 0px;
  align-items: center;
}

.centered-image:hover {
  animation: shake 0.5s infinite;

}

@keyframes shake {
  0% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-5px);
  }
  50% {
    transform: translateX(5px);
  }
  75% {
    transform: translateX(-5px);
  }
  100% {
    transform: translateX(0);
  }
}

.sign-in, .sign-up {
  text-align: center;
  margin-top: 200px;
  color: white;
  font-family: "Bebas";
  flex-direction: column;
}

.submit-button {
  background-color: black;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  cursor: pointer;
  margin-top: 10px;
  font-size: 1.3rem;
  position: relative;
  overflow: hidden;
  color: white;
}

.submit-button:hover {
  color: white;
  animation: glowing 1.5s infinite;
}


@keyframes glowing {
  0% {
    box-shadow: 0 0 5px #00ffff, 0 0 20px #00ffff;
  }
  50% {
    box-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
  }
  100% {
    box-shadow: 0 0 5px #00ffff, 0 0 20px #00ffff;
  }
}

.form-row {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 2rem;
}

.new-apartment-form {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  font-size: 1.3rem;
  justify-content: center;
  padding-top: 100px;
}

.new-apartment-form > * {
  margin-right: 10px;
  margin-bottom: 10px;
}

.apartmentnew {
  text-align: center;
  color: white;
  font-family: "Bebas";
}

.addlisting {
  display: flex;
  justify-content: center;
  height: 30vh;
  position: absolute;
  z-index: 999;
  right: 600px;
  top: 50px;
  align-items: center;
}

.sign-in-heading, .sign-up-heading {
  text-align: center;
  color: white;
  font-family: "Bebas";
  font-size: 3rem;
}

.sign-up-words, .sign-in-words {
  font-size: 1.3rem;
}

.centered-container {
  display: flex;
  justify-content: center;
  height: 80vh;
}

.signupwords, .signinwords {
  display: flex;
  justify-content: center;
  height: 30vh;
  position: absolute;
  z-index: 999;
  right: 600px;
  top: 50px;
  align-items: center;
}

